cmake_minimum_required(VERSION 3.14)
project(learnAlgorithm)

set(CMAKE_CXX_STANDARD 11)

add_subdirectory(InsertSort)
add_subdirectory(SelectionSort)
add_subdirectory(mergeSort)
add_subdirectory(quickSort)
add_subdirectory(MaxHeap)
add_subdirectory(BinarySearch)
add_subdirectory(BST)
add_subdirectory(UnionFind)
